--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.zhntd.nick.rocklite.RockLite" >
+        <activity android:name="com.zhntd.nick.rocklite.MainActivity" >
         </activity>
 
         <service android:name="com.zhntd.nick.rocklite.service.CoreService" >
