--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/Header2ActionBar-0.2.1.jar"/>
+	<classpathentry kind="lib" path="libs/universal-image-loader-1.9.2-SNAPSHOT-with-sources.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar" sourcepath="E:/android-sdks/extras/android/support/v4/src"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
