--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,8 @@
         </activity>
         <activity android:name="com.zhntd.nick.rocklite.PlayActivity2" >
         </activity>
+        <activity android:name="com.zhntd.nick.rocklite.PlayActivity1" >
+        </activity>
         <activity android:name="com.zhntd.nick.rocklite.OnlineMusicSite" >
         </activity>
 
