--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="libs/Header2ActionBar-0.2.1.jar"/>
 	<classpathentry kind="lib" path="libs/universal-image-loader-1.9.2-SNAPSHOT-with-sources.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar" sourcepath="E:/android-sdks/extras/android/support/v4/src"/>
+	<classpathentry kind="lib" path="E:/libs/picasso-2.5.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
